[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-docx>=1.1.2",
    "reportlab>=4.3.1",
    "streamlit>=1.44.0",
    "wordcloud>=1.9.4",
]
